--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,9 @@ app_url:          https://www.tagtog.net
 url:              https://docs.tagtog.net
 baseurl:          
 sidebar_toc:
+  - name: Tutorials
+    pages:
+      - quick_tutorials
   - name: Web Application
     pages:
       - projects
