--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ sidebar_toc:
       - dictionaries
 
 author:
-  name:           'tagtog Sp.z.o.o'
+  name:           'tagtog Sp. z o.o.'
   url:            https://twitter.com/tagtog_net
 
 paginate:         5
