--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ plugins:
   - jemoji
 
 # Custom vars
-version:            1.0.1
+version: 3.2018-W22.11
 sidebar_home_link:  true
 search_page:   false
 # sidebar_blog_link:  '/blog'   # By default, your home page is your blog
