--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,9 @@ sidebar_toc:
       - formats
       - anndoc
       - dictionaries
+  - name: On Premises
+    pages:
+      - readme
 
 author:
   name:           'tagtog Sp. z o.o.'
@@ -51,7 +54,7 @@ plugins:
   - jemoji
 
 # Custom vars
-version: 3.2018-W22.12
+version: 3.2018-W22.13
 sidebar_home_link:  true
 search_page:   false
 # sidebar_blog_link:  '/blog'   # By default, your home page is your blog
