create updates page :)

--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,8 @@ sidebar_toc:
       - dictionaries
   - name: On Premises
     pages:
-      - readme
+      - on_premises_readme
+      - updates
 
 author:
   name:           'tagtog Sp. z o.o.'
