--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ plugins:
   - jemoji
 
 # Custom vars
-version: 3.2018-W26.2
+version: 3.2018-W27.NativePDF-0
 sidebar_home_link:  true
 search_page:   false
 # sidebar_blog_link:  '/blog'   # By default, your home page is your blog
