--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ plugins:
   - jemoji
 
 # Custom vars
-version: 3.2018-W30.0-SNAPSHOT
+version: 3.2018-W30.1
 sidebar_home_link:  true
 search_page:   false
 # sidebar_blog_link:  '/blog'   # By default, your home page is your blog
