--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ plugins:
   - jemoji
 
 # Custom vars
-version: 3.2018-W38.3-SNAPSHOT
+version: 3.2018-W38.3-SNAPSHOT-1
 sidebar_home_link:  true
 search_page:   false
 # sidebar_blog_link:  '/blog'   # By default, your home page is your blog
