--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ plugins:
   - jemoji
 
 # Custom vars
-version: 3.2019-W07.0
+version: 3.2019-W09.-1-SNAPSHOT-0
 sidebar_home_link:  true
 search_page:   false
 # sidebar_blog_link:  '/blog'   # By default, your home page is your blog
