--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ sidebar_toc:
       - projects
       - project_documents
       - webeditor
+      - metrics
       - collaboration
       - pdfann
 
