--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ plugins:
   - jemoji
 
 # Custom vars
-version: 3.2019-W28.0
+version: 3.2019-W29.0-SNAPSHOT
 sidebar_home_link: true
 search_page: false
 # sidebar_blog_link:  '/blog'   # By default, your home page is your blog
