--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ plugins:
   - jemoji
 
 # Custom vars
-version: 3.2019-W47.0
+version: 3.2019-W47.1-SNAPSHOT-1
 sidebar_home_link: true
 search_page: false
 # sidebar_blog_link:  '/blog'   # By default, your home page is your blog
