--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ plugins:
   - jemoji
 
 # Custom vars
-version: 3.2020-W31.2
+version: 3.2020-W32.0-SNAPSHOT.0
 sidebar_home_link: true
 search_page: false
 # sidebar_blog_link:  '/blog'   # By default, your home page is your blog
