--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ plugins:
   - jemoji
 
 # Custom vars
-version: 3.2021-W37.0-SNAPSHOT.43
+version: 3.2021-W37.0
 sidebar_home_link: true
 search_page: false
 # sidebar_blog_link:  '/blog'   # By default, your home page is your blog
